--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "express": "^4.18.2",
     "type-graphql": "^2.0.0-rc.2"
   },
   "devDependencies": {
@@ -73,7 +74,8 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "@vercel/node": "^3.0.0"
   },
   "jest": {
     "moduleFileExtensions": [
